@@ -1,0 +1,3 @@
+copy $x := <a/>, $y := <b/>
+modify ()
+return $x
